@@ -37,6 +37,8 @@ and CUDA
 
 - GitHub action to run Clang static analysis.
 
+- Umpire replay now takes a "-help" option and displays usage information.
+
 ### Changed
 
 - Umpire now builds as a single library, libumpire.a or libumpire.so, rather
